<resources>
    <string name="app_name">Blackboard</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="username">username</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="change_grade">Change Grade</string>
    <string name="add_grade">Add Grade</string>
    <string name="students">Students</string>
    <string name="view_grades">view grades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
</resources>
